force-app/main/default/objects/Staff_Access__c/Staff_Access__c.object-meta.xml
<CustomObject>
    <description>The staff assignments object is a junction object between Account and Contact, allowing a staff member to be assigned and multiple departments and access their data.</description>
    <label>Staff Access</label>
    <nameField>
        <label>Staff Access</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>