force-app/main/default/objects/Staff_Access__c/fields/Care_Facility__c.field-meta.xml
<CustomField>
    <fullName>Care_Facility__c</fullName>
    <description>The care facility account the staff is being added to.</description>
    <inlineHelpText>Adding this staff member to this department or facility will share access to that department.</inlineHelpText>
    <label>Care Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>StaffAccess</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>