force-app/main/default/objects/Staff_Access__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>If a division has many department records in it, the division group field is a label that can be used to group them.</description>
    <formula>Care_Facility__r.Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If a division has many department records in it, the division group field is a label that can be used to group them.</inlineHelpText>
    <label>Division</label>
    <type>Text</type>
</CustomField>