force-app/main/default/objects/Staff_Access__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <description>The staff member to add to the department or facility.</description>
    <inlineHelpText>The staff member to add to the department or facility.</inlineHelpText>
    <label>Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staff Access</relationshipLabel>
    <relationshipName>StaffAccess</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>