force-app/main/default/objects/Staff_Access__c/fields/Staff_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Staff_Record_ID__c</fullName>
    <description>Returns the record ID of the related Staff record. Used in a matching rule. Not meant to be on the page layout.</description>
    <label>Staff Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>