force-app/main/default/objects/Staff_Access__c/fields/Staff_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Staff_Record_Link__c</fullName>
    <description>Returns a link to the Staff record. Displayed on related lists.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; Staff_Record_ID__c , Staff__r.FirstName+ &quot; &quot; + Staff__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Record Link</label>
    <type>Text</type>
</CustomField>