force-app/main/default/objects/Staff_Access__c/validationRules/Block_edits_to_Staff_Access_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_edits_to_Staff_Access_Fields</fullName>
    <active>true</active>
    <description>Blocks users from editing the following Staff Access fields: Staff, Facility and Access Level.</description>
    <errorConditionFormula>ISCHANGED( Care_Facility__c )  || 
ISCHANGED( Staff__c ) ||
ISCHANGED( Access_Level__c )</errorConditionFormula>
    <errorMessage>Unable to edit existing Staff Access. Please delete the current record and create a new Staff Access.</errorMessage>
</ValidationRule>